--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
   "dependencies": {
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-redux": "^4.4.6",
+    "react-redux": "5.0.0-beta.3",
     "redux": "^3.6.0",
-    "redux-saga": "^0.13.0"
+    "redux-saga": "^0.13.0",
+    "reselect": "^2.5.4"
   }
 }
