--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,9 @@
+[libs]
+<PROJECT_ROOT>/assets/react/defs.js
+
 [options]
 module.name_mapper='^lib\/\(.*\)$' -> '<PROJECT_ROOT>/assets/react/lib/\1'
 module.name_mapper='^containers\/\(.*\)$' -> '<PROJECT_ROOT>/assets/react/containers/\1'
 module.name_mapper='^sidebars\/\(.*\)$' -> '<PROJECT_ROOT>/assets/react/sidebars/\1'
 module.name_mapper='^store$' -> '<PROJECT_ROOT>/assets/react/store.js'
+module.name_mapper='^defs$' -> '<PROJECT_ROOT>/assets/react/defs.js'
