--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "enzyme": "^2.6.0",
     "flow-bin": "^0.35.0",
     "jest": "^17.0.3",
+    "jquery": "1.12",
     "postcss-cli": "^2.6.0",
     "postcss-import": "^8.1.3",
     "postcss-simple-vars": "^3.0.0",
