--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "scripts": {
     "test": "jest --config .jest",
     "postcss": "postcss -c postcss.config.js -w",
-    "webpack:watch": "webpack -w",
+    "webpack:vendor": "webpack --config webpack.vendor.js",
+    "webpack:app": "webpack --config webpack.app.js",
+    "webpack:boot": "webpack --config webpack.boot.js",
     "flowtype": "watch \"flow || exit 0\" assets/react",
-    "react": "concurrently --kill-others --prefix \"[{name}]\" --names \"Webpack,Flowtype\" -c \"bgBlue.bold,bgYellow.bold\" \"npm run webpack:watch\" \"npm run flowtype\""
+    "react": "npm run webpack:vendor && concurrently --kill-others --prefix \"[{name}]\" --names \"Webpack:App,Webpack:Boot,Flowtype\" -c \"bgBlue.bold,bgYellow.bold,bgGreen.bold\" \"npm run webpack:app -- -w\" \"npm run webpack:boot -- -w\" \"npm run flowtype\""
   },
   "repository": {
     "type": "git",
