--- a/assets/carbon.app.json
+++ b/assets/carbon.app.json
@@ -67,6 +67,7 @@
     "./assets/react/containers/selectors.js": 75,
     "./assets/react/containers/sagas/base.js": 76,
     "./node_modules/redux-saga/effects.js": 77,
-    "./assets/react/containers/sagas/post-meta.js": 79
+    "./assets/react/containers/sagas/post-meta.js": 79,
+    "./assets/react/containers/components/user-meta-container.js": 80
   }
 }
