--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "lodash": "^4.17.2",
     "object-path-immutable": "^0.5.1",
     "react": "^15.4.0",
