--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lodash": "^4.17.2",
     "object-path-immutable": "^0.5.1",
     "react": "^15.4.0",
+    "react-color": "^2.10.0",
     "react-dom": "^15.4.0",
     "react-redux": "5.0.0-beta.3",
     "recompose": "^0.20.2",
